# amphora-engine

./: CMakeLists.txt  README.md
include/: amphora.h  collision.h  img.h  input.h  render.h  scenes.h  ttf.h  util.h
include/internal/: collision.h  db.h  error.h  events.h  img.h  input.h  memory.h  mixer.h  particles.h  random.h  render.h  save_data.h  scenes.h  session_data.h  tilemap.h  ttf.h  typewriter.h
src/: CMakeLists.txt  amphora.c  collision.c  db.c  error.c  events.c  ht_hash.c  img.c  input.c  lib.c  memory.c  mixer.c  particles.c  prefs.c  random.c  render.c  save_data.c  scenes.c  session_data.c  tilemap.c  ttf.c  typewriter.c
